# IssueSpec-CIKM2026

./: .dockerignore  .gitignore  ANNOTATION_PROTOCOL.md  Dockerfile  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  RELEASE.md  SETUP_GUIDE.md  pyproject.toml  run_pipeline.sh  verify_paper_results.ipynb  verify_paper_results.py
annotator_materials/: 00_README.md  annotator_A.numbers  annotator_B 2.numbers  annotator_C 2.numbers  calibration_set.numbers  gold_standard_report.txt  gold_standard_results.json  master_key.json
api/: main.py
configs/: base.yaml  experiments.yaml  stage1.yaml  stage2.yaml  stage3.yaml  stage4b.yaml  stage5.yaml
human_work/: cluster_curation.xlsx  reference_specs.xlsx  response_ratings.xlsx  response_ratings_blinding.json
notebooks/: 01_data_exploration.ipynb  02_classifier_results.ipynb  03_knowledge_graph.ipynb
scripts/: _agentic_vs_vanilla_rag.py  _agentic_vs_vanilla_rag_n30.py  _audit_kg_purity_qwen.py  _build_embeddings_cache.py  _compute_betweenness.py  _demo_closed_feedback_loop.py  _eval_v5_on_maalej.py  _qwen_judge_5dim_rubric.py  _run_a1b.py  _run_a1b_repbased.py  _run_refiner_variant.py  ablation_a1b_fine_flat_vs_kg.py  audit_hierarchical_cluster_purity_llm.py  benchmark_aspects_guzman.py  benchmark_aspects_guzman_llm.py  build_annotator_materials.py  build_cluster_validation_sheet.py  build_compat_data.py  build_frozen_holdout_and_eval.py  build_human_work_sheets.py  cleanlab_find_label_issues.py  cluster_phase1_hdbscan.py  cluster_phase1b_umap_hdbscan.py  compare_aspects_heur_vs_llm.py  compute_3rater_krippendorff.py  (+66 more)
(+92 files in other folders)
